:construction: Initial work to add include parameter for Zaak resource
