# src/openzaak/components/zaken/api/filters.py
@@ -3,6 +3,7 @@
 from urllib.parse import urlparse
 
 from django.conf import settings
+from django.utils.translation import gettext_lazy as _
 
 from django_filters import filters
 from django_loose_fk.filters import FkOrUrlFieldFilter
@@ -10,6 +11,7 @@ from django_loose_fk.utils import get_resource_for_path
 from vng_api_common.filtersets import FilterSet
 from vng_api_common.utils import get_help_text
 
+from openzaak.components.zaken.api.serializers.zaken import ZaakSerializer
 from openzaak.utils.filters import MaximaleVertrouwelijkheidaanduidingFilter
 
 from ..models import (
@@ -21,6 +23,20 @@ from ..models import (
     ZaakInformatieObject,
     ZaakObject,
 )
+
+
+class IncludeFilter(filters.ChoiceFilter):
+    def __init__(self, *args, **kwargs):
+        serializer_class = kwargs.pop("serializer_class")
+
+        kwargs.setdefault(
+            "choices", [(x, x) for x in serializer_class.inclusion_serializers.keys()]
+        )
+
+        super().__init__(*args, **kwargs)
+
+    def filter(self, qs, value):
+        return qs
 
 
 class ZaakFilter(FilterSet):
@@ -43,6 +59,11 @@ class ZaakFilter(FilterSet):
     rol__betrokkene_identificatie__organisatorische_eenheid__identificatie = filters.CharFilter(
         field_name="rol__organisatorischeeenheid__identificatie",
         help_text=get_help_text("zaken.OrganisatorischeEenheid", "identificatie"),
+    )
+
+    include = IncludeFilter(
+        serializer_class=ZaakSerializer,
+        help_text=_("Haal details van gerelateerde resources direct op."),
     )
 
     class Meta:
