# src/openzaak/components/zaken/openapi.yaml
@@ -1913,6 +1913,14 @@ paths:
         required: false
         schema:
           type: string
+      - name: include
+        in: query
+        description: Haal details van gerelateerde resources direct op.
+        required: false
+        schema:
+          type: string
+          enum:
+          - zaaktype
       - name: ordering
         in: query
         description: Which field to use when ordering the results.
@@ -5828,6 +5836,18 @@ components:
           description: Een korte identificatie van de organisatorische eenheid.
           type: string
           minLength: 1
+        include:
+          title: Include
+          description: 'Haal details van gerelateerde resources direct op.
+
+
+            Uitleg bij mogelijke waarden:
+
+
+            * `zaaktype` - zaaktype'
+          type: string
+          enum:
+          - zaaktype
         ordering:
           title: Ordering
           description: Which field to use when ordering the results.
